- fixed decoder and updated it to use UNICODE characters instead of ASCII

- merged title screen and main screen to fix bug #1

- added an inventory for the equip screen, and info that shows when an item is clicked

- changed mute button to an image input

- made equipping items fully functional

- switched functionality from test equip to the offical button

- shopping now works note: has not been thouroghly tested and also does not have price assignments