@@ -1,3 +1,4 @@
+/* the player's inventory */
 #inventory {
 	display : grid;
 	grid-template-columns : repeat(5, 1fr);
@@ -10,6 +11,7 @@
 	overflow-y : scroll;
 }
 
+/* does the same thing as the one in shop_styles.css, though this file was made first */
 .hide_scrollbar {
 	scrollbar-width : none;
 }
@@ -18,6 +20,7 @@
 	display : none;
 }
 
+/* should seem familiar if you've already looked in shop_styles.css, again this came first but the comments were put into shop_styles.css first */
 .table_item {
 	position : relative;
 	left : 0%;
@@ -47,13 +50,15 @@
 }
 
 .table_item  img {
-	width : 10vw;
+	width : inherit;
 }
 
+/* centers text I guess, in practice this will never do anything as there is no text in any of the inventory slots */
 .table_item  p {
 	text-align : center;
 }
 
+/* styles the item info container */
 #item_info_container {
 	width : 25%;
 	height : 75%;
@@ -79,6 +84,7 @@
 	background : white;
 }
 
+/* styles the slots that equipped items are displayed in */
 #equip_slots {
 	display : grid;
 	grid-template-columns : repeat(3, 1fr);
