@@ -1,3 +1,4 @@
+/* background color */
 :root {
 	--bc : #222222;
 }
@@ -5,26 +6,31 @@ body {
 	background : var(--bc);
 	overflow : hidden;
 }
+/* makes text white unless otherwise specified by another CSS rule */
 h4, span, label, p, input {
 	font-family : monospace;
 	color : white;
 }
+/* styles text inputs so that they're more discrete */
 input[type="text"] {
 	background : var(--bc);
 	border : none;
 	outline : none;
 }
+/* styles the header text */
 #header_text {
 	position : absolute;
 	left : 2%;
 	top : 2%;
 }
+/* styles the text from the story */
 #main_text_container {
 	position : absolute;
 	left : 2%;
 	top : 20%;
 	width : 65%;
 }
+/* positions the text for the player's name */
 #name_text {
 	position : absolute;
 	right : 2%;
@@ -33,28 +39,35 @@ input[type="text"] {
 #input_container {
 	position : relative;
 }
+/* text output */
 .output_line {
 	word-break : break-all;
 }
+/* sets the background of dialogs to match the body */
 dialog::backdrop {
 	background : #222222;
 }
+/* gives dialogs a border */
 dialog {
 	border : solid white;
 }
+/* stands for "black button" as in: has black background */
 .bb {
 	border : solid;
 	background : black;
 }
+/* guess what it stands for, give the button black text on a light background */
 .wb {
 	color : black;
 	border : none;
 	background : lightgray;
 	outline-style : none;
 }
+/* for anything that needs black text */
 .black {
 	color : black;
 }
+/* holds the minimap */
 #minimap_div {
 	position : absolute;
 	width : 25vmin;
@@ -64,6 +77,7 @@ dialog {
 	border-style : solid;
 	border-color : white;
 }
+/* a single tile in the minimap */
 .map_tile {
 	position : absolute;
 	width : 5vmin;
@@ -71,6 +85,7 @@ dialog {
 	bottom : calc(calc(4 - var(--abs_y)) * 5vmin);
 	right : calc(calc(4 - var(--abs_x)) * 5vmin);
 }
+/* provides a visualisation of the user's current location */
 #context_img {
 	position : relative;
 	right : 0%;
@@ -78,7 +93,7 @@ dialog {
 	width : 25vmin;
 	z-index : 13;
 }
-
+/* loading screen */
 #loading {
 	width : 100vw;
 	height : 100vh;
@@ -86,6 +101,7 @@ dialog {
 	border : none;
 	overflow : hidden;
 }
+/* all iframes */
 iframe {
 	position : absolute;
 	left : 0px;
@@ -96,22 +112,14 @@ iframe {
 	height : 100vh;
 	border : none;
 }
-/* #mute_sounds_2 {
-	margin : 0%;
-	padding : 0%;
-	justify-self : end;
-	width : 7.5vmin;
-	height : 7.5vmin;
-} */
+/* character select */
 #char_select {
 	width : 50vw;
 	height : 50vh;
 	overflow-y : scroll;
 	overflow-wrap : break-word;
 }
-#char_select::backdrop {
-	background : #222222;
-}
+/* player can't select or drag images, it's much cleaner */
 img {
 	user-select : none;
 	-webkit-user-drag : none;
