@@ -2,6 +2,7 @@ p, div, td {
 	color : white
 }
 
+/* should really be item_slot but I don't care to change it */
 .table_item {
 	position : relative;
 	left : 0%;
@@ -15,10 +16,13 @@ p, div, td {
 	overflow : hidden;
 }
 
+/* CSS whooooo!!!! */
 .table_item > div {
 	width : 100%;
 	height : 100%;
 }
+
+/* background for item slots */
 .table_item > div > .content {
 	width : 100%;
 	height : 100%;
@@ -30,15 +34,18 @@ p, div, td {
 	clip-path : polygon(var(--v1) var(--v1), var(--v2) var(--v1), var(--v2) var(--v2), var(--v1) var(--v2));
 }
 
+/* sets the image of the item to the correct size */
 .table_item > div > .content > img {
 	width : 100%;
 }
 
-input[type="image"], img, td {
+/* keeps user from selecting or dragging images / text */
+input[type="image"], img, p {
 	-webkit-user-drag : none;
 	-webkit-user-select : none;
 }
 
+/* styles the item slots in the shop */
 #shop_slots {
 	--fw : 60vw;
 	position : absolute;
@@ -51,6 +58,7 @@ input[type="image"], img, td {
 	grid-template-columns : repeat(3, 1fr);
 }
 
+/* for elements that need to scroll but shouldn't show a scrollbar */
 .hide_scrollbar {
 	scrollbar-width : none;
 }
@@ -59,6 +67,7 @@ input[type="image"], img, td {
 	display : none;
 }
 
+/* container for item information */
 #item_info_container {
 	width : 75%;
 	height : 35%;
@@ -71,22 +80,28 @@ input[type="image"], img, td {
 	grid-column-gap : 5vw;
 }
 
+/* all decendents get white text and can make a linebreak at any point */
 #item_info_container * {
 	color : white;
 	word-break : break-all;
 }
 
+/* makes the text size for item stats a bit smaller */
 #item_info_stats {
 	font-size : 0.75em;
 }
 
+/* sets the color for the buy button */
 #buy_btn {
 	background : gray;
 }
+
+/* sets the hover color for the buy button */
 #buy_btn:hover {
 	background : white;
 }
 
+/* used to center the buy button vertically */
 #item_info_container > span {
 	margin-top : auto;
 	margin-bottom : auto;
