@@ -11,3 +11,5 @@
 - switched functionality from test equip to the offical button
 
 - shopping now works note: has not been thouroghly tested and also does not have price assignments
+
+- shopping now works note: items will not be generated or replenished as of now
